ui: select menu in the tab field, and overflow fixes

--- a/ui/cap-react/src/styles/styles.scss
+++ b/ui/cap-react/src/styles/styles.scss
@@ -21,6 +21,7 @@ body {
   width: 100vw;
 }
 
+
 body .grommet {
   font: 14px CAPFont;
 }
@@ -59,6 +60,7 @@ label {
   flex: 1;
   padding-bottom: 5px;
 
+
   .cap-grommet-input {
     input {
       border: 0 !important;
@@ -96,8 +98,34 @@ label {
 
 
 
+
 // xsmall
 @media only screen and (min-width: 320px) {
+
+  .small-row-large-column{
+    flex-direction: column !important;
+  }
+  
+  #list{
+    display: flex;
+    max-width: 95vw;
+    width: 100%;
+    overflow:visible;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center
+  }
+  
+  #item{
+    min-width: 223px;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  
+  #tabs-select-component .css-yk16xz-control{
+    border:0; 
+  }
   .md-row {
     flex-direction: row !important;
     justify-content: space-around;
@@ -131,7 +159,29 @@ label {
   .dashboard-meter ul li {
     flex-direction: row !important;
   }
+
   
+  .md-column {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .tabs-list-items{
+    display: flex !important;
+    flex-direction: row !important;
+    justify-content: space-around;
+  }
+
+  .tabs-list{
+    display:none !important;
+  }
+  .tabs-select-menu{
+    display: flex !important;
+    overflow: visible
+  }
+  .select-menu{
+    width:300px
+  }
+
 
 }
 
@@ -139,20 +189,27 @@ label {
 
 // small
 @media only screen and (min-width: 580px) {
+  .small-row-large-column{
+    flex-direction: row !important;
+  }
   .sm-order-2{
     order:1;
   }
   .sm-order-1{
     order:2;
   }
-  .md-column {
-    display: flex;
-    flex-direction: column !important;
+  #list{
+    max-width: 97vw;
   }
 }
 
 // medium
 @media only screen and (min-width: 720px) {
+  
+  #list{
+    max-width: 92vw;
+  }
+  
   .sm-order-1{
     order:1;
     margin: 0;
@@ -182,23 +239,92 @@ label {
   .lg-row {
     width: auto !important;
   }
+ 
 }
 
-// large
-@media only screen and (min-width: 1135px) {
-  .lg-column {
+@media only screen and (min-width: 800px) {
+  #list{
+    overflow-x:auto;
+    justify-content: flex-start;
+    max-width: 91vw;
+  }
+  .tabs-list-items{
+    display: flex !important;
     flex-direction: row !important;
   }
+  .tabs-list{
+    display:flex !important;
+  }
+
+  .tabs-select-menu{
+    display: none !important
+  }
+
+  
+  
+}
+
+@media only screen and (min-width: 850px) {
+  #list{max-width: 91.5vw;}
+  .xlarge_box{
+    width: 750px;
+  }
+  .justify-large{
+    justify-content: center
+  }
+  
+}
+
+@media only screen and (min-width: 992px) {
+  #list{max-width: 92vw;}
+}
+
+@media only screen and (min-width: 1050px) {
+  #list{max-width: 93vw;}
+
+}
+// large
+@media only screen and (min-width: 1135px) {
+ 
   .lg-row {
     flex-direction: column !important;
   }
+
+  #list{max-width: 93vw;}
+  
+}
+
+
+@media only screen and (min-width: 1200px) {
+  
+  #list{max-width: 94vw;}
+  
+}
+@media only screen and (min-width: 1300px) {
+  
+  #list{max-width: 94vw;}
+  
 }
 
 // xlarge
-@media only screen and (min-width: 1330px) {
+@media only screen and (min-width: 1400px) {
   .md-column {
     display: flex;
     flex: 1;
     flex-direction: row !important;
   }
+  .tabs-list-items{
+    flex-direction: column !important;
+    justify-content: flex-start;
+  }
+  .lg-column {
+    flex-direction: row !important;
+  }
+  #list{ align-items: flex-start; width:auto; max-width: 100%}
+  #item{align-items: flex-start;}
+  .small-row-large-column{
+    flex-direction: column !important;
+  }
 }
+
+
